--- a/app/src/main/res/layout/activity_shark.xml
+++ b/app/src/main/res/layout/activity_shark.xml
@@ -8,13 +8,13 @@
     tools:context=".SharkActivity">
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnEntry"
         android:layout_width="200dp"
         android:layout_height="110dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="36dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/button_style_shark"
         android:onClick="actionEntryToApp"
         android:text="Entry into the application"
@@ -23,8 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView"
