--- a/app/src/main/res/layout/activity_shark.xml
+++ b/app/src/main/res/layout/activity_shark.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".SharkActivity">
+    tools:context=".activities.SharkActivity">
 
     <Button
         android:id="@+id/btnEntry"
@@ -14,7 +14,7 @@
         android:layout_marginBottom="36dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/button_style_shark"
         android:onClick="actionEntryToApp"
         android:text="Entry into the application"
@@ -32,7 +32,7 @@
         android:layout_gravity="center"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="15dp"
         android:text="SharkFrankie"
         android:textColor="#0E1319"
         android:textSize="44dp"
@@ -43,11 +43,11 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="243dp"
-        android:layout_height="351dp"
+        android:layout_width="216dp"
+        android:layout_height="333dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
