--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,9 +5,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_connect"
+            android:id="@+id/nav_scanDevices"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Connect to device" />
+            android:title="Scan devices" />
         <item
             android:id="@+id/nav_disconnect"
             android:icon="@drawable/ic_menu_manage"
