--- a/app/src/main/res/layout/activity_scan_devices.xml
+++ b/app/src/main/res/layout/activity_scan_devices.xml
@@ -8,7 +8,7 @@
     tools:context=".activities.ScanDevicesActivity">
 
     <Button
-        android:id="@+id/btnEntry2"
+        android:id="@+id/btnScanDevices"
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginBottom="200dp"
@@ -16,7 +16,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/button_style_shark"
-        android:onClick="actionScanDevices"
         android:text="Scan devices"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
