Implement sending bytes to manage motors and prepare joystick impl

--- a/app/src/main/res/layout/activity_scan_devices.xml
+++ b/app/src/main/res/layout/activity_scan_devices.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".activities.ScanDevicesActivity">
+    tools:context=".utils.ConnectDevice">
 
     <Button
         android:id="@+id/btnScanDevices"
