--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,11 +7,11 @@
         <item
             android:id="@+id/nav_scanDevices"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Scan devices" />
+            android:title="Connect to Frankie" />
         <item
             android:id="@+id/nav_disconnect"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Disconnect from device" />
+            android:title="Disconnect from Frankie" />
     </group>
 
     <item android:title="Communication">
