--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,16 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_scanDevices"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Connect to Frankie" />
-        <item
-            android:id="@+id/nav_disconnect"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Disconnect from Frankie" />
-    </group>
+    <item android:title="Connections">
+        <menu>
+            <item
+                android:id="@+id/nav_connect"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Connect to Frankie" />
+            <item
+                android:id="@+id/nav_disconnect"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Disconnect from Frankie" />
+        </menu>
+    </item>
 
     <item android:title="Communication">
         <menu>
